remove all TSM references outside new sampling manager
