# api3/global/openapi.gen.yaml
@@ -373,8 +373,9 @@ components:
       description: unknown error
   schemas:
     APIClarityFeature:
-      description: Description of APIClarity feature and the list of API hosts (in
-        the form 'host:port') the feature requires to get trace for
+      description: Description of APIClarity feature and the list of API hosts (Group
+        by trace sources, in the form 'host:port') the feature requires to get trace
+        for
       properties:
         featureDescription:
           description: Short human readable description of the feature
@@ -382,9 +383,7 @@ components:
         featureName:
           $ref: '#/components/schemas/APIClarityFeatureEnum'
         hostsToTrace:
-          items:
-            type: string
-          type: array
+          $ref: '#/components/schemas/HostsToTraceForComponent'
       required:
       - featureName
       type: object
@@ -400,7 +399,8 @@ components:
       type: string
     APIClarityFeatureList:
       description: List of APIClarity features and for each feature the list of API
-        hosts (in the form 'host:port') the feature requires to get trace for
+        hosts (Group by trace sources, in the form 'host:port') the feature requires
+        to get trace for
       properties:
         features:
           items:
@@ -802,6 +802,31 @@ components:
       - IN_PROGRESS
       title: FuzzingStatus
       type: string
+    HostsToTraceForComponent:
+      description: List of trace sources for a component, with theirs list of API
+        hosts to get trace for
+      properties:
+        component:
+          description: Component name
+          type: string
+        traceSourcesHosts:
+          items:
+            $ref: '#/components/schemas/HostsToTraceForTraceSource'
+          type: array
+      type: object
+    HostsToTraceForTraceSource:
+      description: list of API hosts (in the form 'host:port') managed by a traceSource
+      properties:
+        hostsToTrace:
+          description: List of hosts (in the form 'host:port')
+          items:
+            type: string
+          type: array
+        traceSourceID:
+          description: ID of the trace source
+          format: uint32
+          type: integer
+      type: object
     K8sObjectRef:
       properties:
         apiVersion:
